@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.2
-Date: 2020-05-04
+Date: 2020-05-06
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -41,7 +41,10 @@ Imports:
     data.tree,
     lubridate,
     extraDistr,
-    rlang
+    rlang,
+    BB,
+    expm,
+    matrixcalc
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     testthat,
