@@ -79,6 +79,7 @@ export(plotStates)
 export(plotStationary)
 export(prepData)
 export(pseudoRes)
+export(randomEffects)
 export(setModelName)
 export(setStateNames)
 export(simData)
@@ -88,6 +89,7 @@ export(stateProbs)
 export(stationary)
 export(timeInStates)
 export(viterbi)
+importFrom(BB,BBsolve)
 importFrom(Brobdingnag,as.brob)
 importFrom(Brobdingnag,brob)
 importFrom(Brobdingnag,sum)
@@ -127,6 +129,7 @@ importFrom(dplyr,funs)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,lag)
 importFrom(dplyr,summarise_at)
+importFrom(expm,sqrtm)
 importFrom(extraDistr,dcat)
 importFrom(extraDistr,pcat)
 importFrom(extraDistr,rcat)
@@ -172,6 +175,7 @@ importFrom(graphics,segments)
 importFrom(graphics,title)
 importFrom(lubridate,with_tz)
 importFrom(magrittr,"%>%")
+importFrom(matrixcalc,matrix.trace)
 importFrom(mitools,MIcombine)
 importFrom(moveHMM,fitHMM)
 importFrom(moveHMM,simData)
@@ -209,6 +213,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,na.pass)
 importFrom(stats,nlm)
 importFrom(stats,optim)
+importFrom(stats,optimise)
 importFrom(stats,pbinom)
 importFrom(stats,plogis)
 importFrom(stats,pnbinom)
